# terra

./: .gitignore  CMakeLists.txt
.github/workflows/: c-cpp.yml
include/: block.h  entity.h  game.h  layer.h  screen.h  types.h
src/: block.c  entity.c  game.c  layer.c  main.c  screen.c  types.c  utils.c
textures/: tilemap.xcf
